src/yini_test/cases/golden/lenient/valid/keys/underscore-only-key.yini
@yini

^ Keys
_ = "val"
name = "single underscore key"
