src/yini_test/cases/golden/lenient/invalid/keys/key-starts-with-digit.yini
@yini

^ Keys
1key = "val"
